--- a/login.html
+++ b/login.html
@@ -2,8 +2,72 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>大事件登录</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/login.css" />
+		<link rel="stylesheet" type="text/css" href="assets/lib/layui/css/layui.css" />
+		<link rel="stylesheet" type="text/css" href="iconfont.css" />
+		<script src="assets/fonts_2/iconfont.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/lib/layui/layui.all.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/ajaxPrefilter.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
+
+		<!-- 登录注册区域 -->
+		<div class="loginAndRegBox">
+			<div class="title-box">login</div>
+			<!-- 登录的div -->
+			<div class="login-box">
+				<form action="" method="" id="form_login">
+					<div class="user">
+						<svg class="icon icon_size" aria-hidden="true">
+							<use xlink:href="#icon-icon"></use>
+						</svg>
+						<!-- 账号输入框 -->
+						<input type="text" name="username" id=""  placeholder="账号" class="ipt" />
+					</div>
+					<div class="pasword">
+						<svg class="icon icon_size" aria-hidden="true">
+							<use xlink:href="#icon-denglumima"></use>
+						</svg>
+						<!-- //密码输入框 -->
+						<input type="password" name="password" id=""  placeholder="密码" class="ipt" />
+					</div>
+					<button type="submit" class="layui-btn layui-btn-radius color" id="btn">Sign in</button>
+				</form>
+				<a href="">忘记密码?</a> &nbsp;&nbsp;&nbsp;&nbsp; <a href="javascrip:;" id="new_uesr">注册新用户</a>
+			</div>
+			
+			<!-- 注册的div -->
+			<div class="reg-box" style="display: none;">
+				<form action="" method="" id="form_reg">
+					<div class="user">
+						<svg class="icon icon_size" aria-hidden="true">
+							<use xlink:href="#icon-icon"></use>
+						</svg>
+						<!-- 账号输入框 -->
+						<input type="text" name="username" id="new_username" value="" placeholder="账号" class="ipt" />
+					</div>
+					<div class="pasword">
+						<svg class="icon icon_size" aria-hidden="true">
+							<use xlink:href="#icon-denglumima"></use>
+						</svg>
+						<!-- //密码输入框 -->
+						<input type="password" name="password" id="pasword_1" value="" placeholder="请输入密码" class="ipt" />
+					</div>
+					<div class="pasword">
+						<svg class="icon icon_size" aria-hidden="true">
+							<use xlink:href="#icon-denglumima"></use>
+						</svg>
+						<!-- /密码确认输入框 -->
+						<input type="password" name="" id="pasword_2" value="" placeholder="请确认密码" class="ipt" />
+					</div>
+					<button type="submit" class="layui-btn layui-btn-radius color" id="btn_create">Create</button>
+				</form>
+
+				<br><a href="javascript:;" id="back_login">已有帐户去登录></a>
+			</div>
+		</div>
+		<script src="assets/js/login.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
