--- a/index.html
+++ b/index.html
@@ -2,8 +2,115 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>首页</title>
+		<link rel="stylesheet" type="text/css" href="assets/lib/layui/css/layui.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/index.css" />
+		<script src="assets/lib/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+		<!-- <script src="assets/lib/layui/layui.all.js" type="text/javascript" charset="utf-8"></script> -->
+		<script src="assets/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/ajaxPrefilter.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/index.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
+		<div class="layui-layout layui-layout-admin">
+			<div class="layui-header">
+				<div class="layui-logo layui-hide-xs layui-bg-black" style="color: orange !important;">后台管理系统</div>
+				<!-- 头部区域（可配合layui 已有的水平导航） -->
+
+				<ul class="layui-nav layui-layout-right">
+					<li class="layui-nav-item layui-hide layui-show-md-inline-block">
+						<a href="javascript:;">
+							<img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+								class="layui-nav-img" style="display: none;">
+							<span class="text-avatar">A</span>
+							<span id="get_username">tester</span>
+						</a>
+						<dl class="layui-nav-child" style="border-radius: 10px !important;">
+							<dd><a href="">基本资料</a></dd>
+							<dd><a href="">更换头像</a></dd>
+							<dd><a href="">重置密码</a></dd>
+						</dl>
+					</li>
+					<li class="layui-nav-item"  lay-unselect >
+						<a href="javascript:;" style="color: orange;" id="out">
+							Sign out
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="layui-side layui-bg-black">
+				<div class="layui-side-scroll">
+					<!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+					<ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
+						<li class="layui-nav-item layui-nav-itemed layui-this">
+							<a class="" href="home/dashboard.html" target="fm">
+								<i class="layui-icon layui-icon-home"></i>&nbsp;
+								首页
+							</a>
+						</li>
+						<li class="layui-nav-item layui-nav-itemed">
+							<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>&nbsp;文章管理
+							</a>
+							<dl class="layui-nav-child ">
+								<dd><a href="javascript:;">文章类别</a></dd>
+								<dd><a href="javascript:;">文章列表</a></dd>
+								<dd><a href="">发表文章</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a href="javascript:;"><i class="layui-icon layui-icon-user"></i>&nbsp;个人中心</a>
+							<dl class="layui-nav-child">
+								<dd><a href="javascript:;">基本资料</a></dd>
+								<dd><a href="javascript:;">更换头像</a></dd>
+								<dd><a href="">重置密码</a></dd>
+							</dl>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="layui-body" style="overflow: hidden;">
+				<!-- 内容主体区域 -->
+				<iframe src="home/dashboard.html"  name="fm"></iframe>
+
+			</div>
+
+			<div class="layui-footer" style="text-align: center !important;">
+				<!-- 底部固定区域 -->
+				底部固定区域
+			</div>
+		</div>
+		<script>
+			//JS 
+			layui.use(['element', 'layer', 'util'], function() {
+				var element = layui.element,
+					layer = layui.layer,
+					util = layui.util,
+					$ = layui.$;
+
+				//头部事件
+				util.event('lay-header-event', {
+					//左侧菜单事件
+					menuLeft: function(othis) {
+						layer.msg('展开左侧菜单的操作', {
+							icon: 0
+						});
+					},
+					menuRight: function() {
+						layer.open({
+							type: 1,
+							content: '<div style="padding: 15px;">处理右侧面板的操作</div>',
+							area: ['260px', '100%'],
+							offset: 'rt' //右上角
+								,
+							anim: 5,
+							shadeClose: true
+						});
+					}
+				});
+
+			});
+		</script>
 	</body>
 </html>
