完成了修改用户名称和用户密码

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 						<li class="layui-nav-item">
 							<a href="javascript:;"><i class="layui-icon layui-icon-user"></i>&nbsp;个人中心</a>
 							<dl class="layui-nav-child">
-								<dd><a href="javascript:;">基本资料</a></dd>
-								<dd><a href="javascript:;">更换头像</a></dd>
-								<dd><a href="">重置密码</a></dd>
+								<dd><a href="user.html" target="fm">基本资料</a></dd>
+								<dd><a href="user_pwd.html" target="fm">更换头像</a></dd>
+								<dd><a href="user_pwd.html" target="fm">重置密码</a></dd>
 							</dl>
 						</li>
 					</ul>
@@ -77,8 +77,8 @@
 			</div>
 
 			<div class="layui-footer" style="text-align: center !important;">
-				<!-- 底部固定区域 -->
-				底部固定区域
+				&copy; &nbsp;www.junhaishuaia.com-大叔不帅
+				
 			</div>
 		</div>
 		<script>
