完成头像更换功能

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 				<ul class="layui-nav layui-layout-right">
 					<li class="layui-nav-item layui-hide layui-show-md-inline-block">
 						<a href="javascript:;">
-							<img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
-								class="layui-nav-img" style="display: none;">
-							<span class="text-avatar">A</span>
+							<img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"class="layui-nav-img" id="img" style="display: none;">
+							<span class="text-avatar"></span>
 							<span id="get_username">tester</span>
 						</a>
 						<dl class="layui-nav-child" style="border-radius: 10px !important;">
@@ -62,7 +61,7 @@
 							<a href="javascript:;"><i class="layui-icon layui-icon-user"></i>&nbsp;个人中心</a>
 							<dl class="layui-nav-child">
 								<dd><a href="user.html" target="fm">基本资料</a></dd>
-								<dd><a href="user_pwd.html" target="fm">更换头像</a></dd>
+								<dd><a href="user_avatar.html" target="fm">更换头像</a></dd>
 								<dd><a href="user_pwd.html" target="fm">重置密码</a></dd>
 							</dl>
 						</li>
