--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 							<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>&nbsp;文章管理
 							</a>
 							<dl class="layui-nav-child ">
-								<dd><a href="javascript:;">文章类别</a></dd>
-								<dd><a href="javascript:;">文章列表</a></dd>
+								<dd><a href="article.html" target="fm">文章类别</a></dd>
+								<dd><a href="art_list.html" target="fm">文章列表</a></dd>
 								<dd><a href="">发表文章</a></dd>
 							</dl>
 						</li>
